fix header spacing

--- a/css/g0v-user-center.css
+++ b/css/g0v-user-center.css
@@ -58,7 +58,7 @@ a:active {
 	display: inline-block;
 	font-size: 1.2rem;
 	line-height: 2.5rem;
-	margin: 0;
+	margin: 0 1rem 0 0;
 	padding: 0;
 }
 
